Fix badge z-index

--- a/apk-editor-studio/app.css
+++ b/apk-editor-studio/app.css
@@ -4493,6 +4493,7 @@ h3 {
   position: fixed;
   bottom: 20px;
   right: 20px;
+  z-index: 5;
   padding: 10px 18px;
   color: white;
   text-decoration: none;
